--- a/demo.less
+++ b/demo.less
@@ -93,3 +93,18 @@ body {
         }
     }
 }
+.fa-hover {
+  margin-bottom: 20px;
+}
+.fa-hover a {
+    i {
+        margin-right: 10px;
+        font-size: 2em;
+    }
+    color: @body-text-color;
+    &:hover {
+        color: @body-text-color;
+    }
+
+    
+}
