--- a/src/css/variable.less
+++ b/src/css/variable.less
@@ -186,6 +186,12 @@
 @form-row-bottom-margin: 0.8em;
 
 // =========
+// Web Icons
+// =========
+@icon-border-color: @body-text-color;
+
+
+// =========
 // z-index
 // =========
 @zindex-navbar:            1000;
