--- a/src/css/utils.less
+++ b/src/css/utils.less
@@ -112,3 +112,56 @@
 .@{ui-class-prefix}massive {
     font-size: @massive-font-size;
 }
+
+// web icons
+.@{ui-class-prefix}icon-border {
+  padding: .2em .25em .15em;
+  border: solid .08em @icon-border-color;
+  border-radius: .1em;
+}
+
+.@{ui-class-prefix}icon-fw {
+  width: (18em / 14);
+  text-align: center;
+}
+
+.@{ui-class-prefix}icon-lg {
+  font-size: (4em / 3);
+  line-height: (3em / 4);
+  vertical-align: -15%;
+}
+.@{ui-class-prefix}icon-2x { font-size: 2em; }
+.@{ui-class-prefix}icon-3x { font-size: 3em; }
+.@{ui-class-prefix}icon-4x { font-size: 4em; }
+.@{ui-class-prefix}icon-5x { font-size: 5em; }
+
+.@{ui-class-prefix}icon-spin {
+  -webkit-animation: spin 2s infinite linear;
+  -moz-animation: spin 2s infinite linear;
+  -o-animation: spin 2s infinite linear;
+  animation: spin 2s infinite linear;
+}
+
+@-moz-keyframes spin {
+  0% { -moz-transform: rotate(0deg); }
+  100% { -moz-transform: rotate(359deg); }
+}
+@-webkit-keyframes spin {
+  0% { -webkit-transform: rotate(0deg); }
+  100% { -webkit-transform: rotate(359deg); }
+}
+@-o-keyframes spin {
+  0% { -o-transform: rotate(0deg); }
+  100% { -o-transform: rotate(359deg); }
+}
+@keyframes spin {
+  0% {
+    -webkit-transform: rotate(0deg);
+    transform: rotate(0deg);
+  }
+  100% {
+    -webkit-transform: rotate(359deg);
+    transform: rotate(359deg);
+  }
+}
+
